k8s/base/http-pulsar-poller-fi-kuopio-vp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-pulsar-poller-fi-kuopio-vp-dep
  labels:
    app.kubernetes.io/name: http-pulsar-poller
    app.kubernetes.io/instance: http-pulsar-poller-fi-kuopio-vp
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: http-pulsar-poller-fi-kuopio-vp
  template:
    metadata:
      labels:
        app: http-pulsar-poller-fi-kuopio-vp
        networkPolicy: client-only
        podDisruptionBudget: max-unavailable-one
        app.kubernetes.io/name: http-pulsar-poller
        app.kubernetes.io/instance: http-pulsar-poller-fi-kuopio-vp
    spec:
      containers:
        - name: http-pulsar-poller-fi-kuopio-vp
          image: tvvlmj/http-pulsar-poller:edge
          imagePullPolicy: Always
          resources:
            requests:
              # GCP Autopilot does not accept less on 2022-02-02.
              cpu: 251m
              memory: 64Mi
              ephemeral-storage: 8Ki
            limits:
              cpu: "1"
              memory: 512Mi
              ephemeral-storage: 2Mi
          volumeMounts:
            - name: http-pulsar-poller-fi-kuopio-vp-secret-volume
              mountPath: "/secrets"
              readOnly: true
          ports:
            - name: liveness-port
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: liveness-port
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /healthz
              port: liveness-port
            failureThreshold: 30
            periodSeconds: 2
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsUser: 10001
            runAsGroup: 10001
      volumes:
        - name: http-pulsar-poller-fi-kuopio-vp-secret-volume
          secret:
            secretName: http-pulsar-poller-fi-kuopio-vp-secret
