k8s/base/journey-matcher.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journey-matcher-dep
  labels:
    app.kubernetes.io/name: journey-matcher
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: journey-matcher
  template:
    metadata:
      labels:
        app: journey-matcher
        networkPolicy: client-only
        podDisruptionBudget: max-unavailable-one
        app.kubernetes.io/name: journey-matcher
    spec:
      containers:
        - name: journey-matcher
          image: tvvlmj/waltti-apc-journey-matcher:edge
          imagePullPolicy: Always
          resources:
            requests:
              # GCP Autopilot does not accept less on 2022-02-02.
              cpu: 251m
              memory: 128Mi
              ephemeral-storage: 100Mi
            limits:
              cpu: 2
              memory: 8Gi
              # 10Mi is not enough
              ephemeral-storage: 100Mi
          volumeMounts:
            - name: journey-matcher-secret-volume
              mountPath: "/secrets"
              readOnly: true
          ports:
            - name: liveness-port
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: liveness-port
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /healthz
              port: liveness-port
            failureThreshold: 30
            periodSeconds: 2
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsUser: 10001
            runAsGroup: 10001
      volumes:
        - name: journey-matcher-secret-volume
          secret:
            secretName: journey-matcher-secret
