k8s/base/mqtt-deduplicator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-deduplicator-dep
  labels:
    app.kubernetes.io/name: pulsar-topic-deduplicator
    app.kubernetes.io/instance: mqtt-deduplicator
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mqtt-deduplicator
  template:
    metadata:
      labels:
        app: mqtt-deduplicator
        networkPolicy: client-only
        podDisruptionBudget: max-unavailable-one
        app.kubernetes.io/name: pulsar-topic-deduplicator
        app.kubernetes.io/instance: mqtt-deduplicator
    spec:
      containers:
        - name: mqtt-deduplicator
          image: tvvlmj/pulsar-topic-deduplicator:edge
          imagePullPolicy: Always
          resources:
            requests:
              # GCP Autopilot does not accept less on 2022-02-02.
              cpu: 251m
              memory: 64Mi
              ephemeral-storage: 8Ki
            limits:
              cpu: "1"
              memory: 1024Mi
              ephemeral-storage: 2Mi
          volumeMounts:
            - name: mqtt-deduplicator-secret-volume
              mountPath: "/secrets"
              readOnly: true
          ports:
            - name: liveness-port
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: liveness-port
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /healthz
              port: liveness-port
            failureThreshold: 30
            periodSeconds: 2
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsUser: 10001
            runAsGroup: 10001
      volumes:
        - name: mqtt-deduplicator-secret-volume
          secret:
            secretName: mqtt-deduplicator-secret
