k8s/base/mqtt-pulsar-forwarder.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-pulsar-forwarder-dep
  labels:
    app.kubernetes.io/name: mqtt-pulsar-forwarder
spec:
  # Match the number of zones in the region.
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: mqtt-pulsar-forwarder
  template:
    metadata:
      labels:
        app: mqtt-pulsar-forwarder
        app.kubernetes.io/name: mqtt-pulsar-forwarder
    spec:
      # Each zone should have exactly one mqtt-pulsar-forwarder to add
      # redundancy into MQTT data collection. Any further replicas would waste
      # capacity.
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - mqtt-pulsar-forwarder
              topologyKey: topology.kubernetes.io/zone
      containers:
        - name: mqtt-pulsar-forwarder
          image: ghcr.io/tvv-lippu-ja-maksujarjestelma-oy/mqtt-pulsar-forwarder:edge
          imagePullPolicy: Always
          resources:
            requests:
              # GCP Autopilot does not accept less on 2022-02-02.
              cpu: 251m
              memory: 64Mi
              ephemeral-storage: 8Ki
            limits:
              cpu: "1"
              memory: 512Mi
              ephemeral-storage: 2Mi
          volumeMounts:
            - name: mqtt-pulsar-forwarder-secret-volume
              mountPath: "/secrets"
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsUser: 10001
            runAsGroup: 10001
      volumes:
        - name: mqtt-pulsar-forwarder-secret-volume
          secret:
            secretName: mqtt-pulsar-forwarder-secret
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mqtt-pulsar-forwarder-deny-ingress-allow-egress
  labels:
    app.kubernetes.io/name: mqtt-pulsar-forwarder
spec:
  podSelector:
    matchLabels:
      app: mqtt-pulsar-forwarder
  policyTypes:
    - Egress
    - Ingress
  egress:
    - {}
